--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-6">
-                <img src="path_to_your_image" alt="Bay of Islands Scenery" class="img-fluid">
+                <img src="/BayOfIslandsSunset1.jpg" alt="Bay of Islands Scenery" class="img-fluid">
               </div>
               <div class="col-md-6">
                 <h2>Discover the Beauty of the Bay of Islands</h2>
@@ -57,7 +57,7 @@
                 <a href="#contact" class="btn btn-primary">Contact Us</a>
               </div>
               <div class="col-md-6">
-                <img src="path_to_your_image" alt="Newfoundland Scenery" class="img-fluid">
+                <img src="/BayOfIslandsSunset2.jpg" alt="Newfoundland Scenery" class="img-fluid">
               </div>
             </div>
           </div>
