--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
             </div>
           </div>
         </section>
-        <!-- Add more sections as needed -->
+        <section id="map" class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-md-12"></div>
+            </div>
+          </div>
+        </section>
       </main>
   
       <footer class="bg-primary text-white py-4">
@@ -75,6 +81,42 @@
   
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>
+      function initMap() {
+        // Create a map centered around Corner Brook
+        const map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 48.9444, lng: -57.9266 },
+          zoom: 11,
+        });
+  
+        // Define the municipalities and their coordinates
+        const municipalities = [
+          { name: "Corner Brook", coordinates: { lat: 48.9556, lng: -57.9336 } },
+          { name: "Lark Harbour", coordinates: { lat: 49.0556, lng: -58.1132 } },
+          { name: "York Harbour", coordinates: { lat: 49.0537, lng: -58.1275 } },
+          { name: "Glenburnie-Birchy Head-Shoal Brook", coordinates: { lat: 49.1673, lng: -58.2333 } },
+          { name: "Irishtown-Summerside", coordinates: { lat: 48.9709, lng: -57.8668 } },
+          { name: "Meadows", coordinates: { lat: 48.9581, lng: -57.9358 } },
+          { name: "Mount Moriah", coordinates: { lat: 48.9616, lng: -57.9054 } },
+          { name: "Massey Drive", coordinates: { lat: 48.9689, lng: -57.8659 } },
+          { name: "Humber Valley Resort", coordinates: { lat: 48.9294, lng: -57.8782 } },
+          { name: "Irishtown", coordinates: { lat: 48.9806, lng: -57.8774 } },
+          { name: "Cox's Cove", coordinates: { lat: 49.1232, lng: -58.0257 } }
+        ];
+  
+        // Add markers for each municipality
+        municipalities.forEach((municipality) => {
+          new google.maps.Marker({
+            position: municipality.coordinates,
+            map: map,
+            title: municipality.name,
+          });
+        });
+      }
+    </script>
+  
+    <!-- Replace YOUR_API_KEY with your actual Google Maps API key -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRLzIT4EI3vjJFPVdsj3HscM62WDqhgNk&callback=initMap" async defer></script>
   </body>
 
 </html>
