--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
           </div>
         </section>
-        <section id="map" class="jumbotron jumbotron-fluid">
+        <section id="map" class="jumbotron jumbotron-fluid" style="height: 500px;">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-12"></div>
@@ -86,7 +86,7 @@
         // Create a map centered around Corner Brook
         const map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 48.9444, lng: -57.9266 },
-          zoom: 11,
+          zoom: 13,
         });
   
         // Define the municipalities and their coordinates
