--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       function initMap() {
         // Create a map centered around Corner Brook
         const map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 48.9444, lng: -57.9266 },
-          zoom: 9,
+          center: { lat: 48.99969354, lng: -58.09075927 },
+          zoom: 10,
           // disableDefaultUI: true,
           gestureHandling: "cooperative",
         });
