--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
   
   <body>
     <div id="app">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Bay of Islands Community</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+<!--             <li class="nav-item">
+              <a class="nav-link" href="communities.html">Communities</a>
+            </li> -->
+          </ul>
+        </div>
+      </nav>
+
       <header class="bg-primary text-white py-4">
         <div class="container text-center">
           <h1>Welcome to the Bay of Islands Community!</h1>
@@ -54,7 +74,7 @@
                   Nestled amidst picturesque hills and surrounded by pristine waters, the Bay of Islands is an outdoor enthusiast's
                   paradise. From hiking and kayaking to fishing and wildlife spotting, there's something for everyone to enjoy.
                 </p>
-                <a href="#contact" class="btn btn-primary">Contact Us</a>
+                <a href="contact.html" class="btn btn-primary">Contact Us</a>
               </div>
               <div class="col-md-6">
                 <img src="/BayOfIslandsSunset2.jpg" alt="Newfoundland Scenery" class="img-fluid">
@@ -67,23 +87,6 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-12"></div>
-            </div>
-          </div>
-        </section>
-
-        <section id="contact" class="py-5">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-md-12">
-                <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-                <script>
-                  hbspt.forms.create({
-                    region: "na1",
-                    portalId: "40177606",
-                    formId: "20c72862-edd5-44de-a391-61378e3c44e2"
-                  });
-                </script>
-              </div>
             </div>
           </div>
         </section>
