--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="app">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Bay of Islands Community</a>
+        <a class="navbar-brand" href="/">Bay of Islands Community</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
